Fix Style and Script:

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 <div class="counter">
   <h1 class="counter__title"> Counter App </h1>
   <div class="counter__value">
-      <input type="text" readonly="readonly" id="counter" value="0">
-  </div>
-  <div class="counter__btn">
-    <input type="button" value="Increment">
-    <input type="button" value="Decrement">
+    <button id="inc">-</button>
+    <input type="text" readonly="readonly" id="counter" value="0">
+    <button id="dec">+</button>
   </div>
 </div>
   
