Added few functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <div class="counter">
   <h1 class="counter__title"> Counter App </h1>
+  <p>This is a Simple count app.You can contribute into it by forking the repo.</p>
+  <a href="https://github.com/mfaridzia/counter-hack-app">Fork From Here</a>
   <div class="counter__value">
     <button id="inc">-</button>
     <input type="text" readonly="readonly" id="counter" value="0">
